--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 *.log
 **/*.out
 *.out
+
+# executables. TODO: find an easier way to do this once there are too many to keep track of
+TFile_utils/printRootFile
+TGraph_utils/test/testTGAData
+TGraph_utils/test/testPoint
