--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,12 @@
 *.out
 **/*.pdf
 *.pdf
+**/*.root
+*.root
 
 # executables. TODO: find an easier way to do this once there are too many to keep track of
 TFile_utils/printRootFile
 TFile_utils/saveCanvas
 TGraph_utils/test/testTGAData
 TGraph_utils/test/testPoint
+EventMixer/src/simpleMixer
