first working version including fitting

--- a/HLTStudies/makefile
+++ b/HLTStudies/makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -I../ $(shell root-config --libs --cflags) -std=c++11 -Wall -Wextra -Wshadow RateExtrapolation.cc -o RateExtrapolation
+	g++ -I../ $(shell root-config --libs --cflags) -std=c++11 -Wall -Wextra -Wshadow -O2 RateExtrapolation.cc -o RateExtrapolation
