Changes to get easier to parse output from printRootFile.
Introducing breaking changes in recurseOnFile!
Interface to func changes from taking only a TObject* to taking a TObject* and a const string reference.

--- a/TFile_utils/makefile
+++ b/TFile_utils/makefile
@@ -10,7 +10,7 @@ CXXFLAGS=-Wall
 all: printRootFile saveCanvas
 
 printRootFile: printRootFile.C
-	$(CXX) $^ $(INC_DIRS) $(ROOT_CONFIG) $(CXXFLAGS) -o $@
+	$(CXX) $^ $(INC_DIRS) $(ROOT_CONFIG) $(CXXFLAGS) -o $@ -lRooFitCore
 
 saveCanvas: saveCanvas.C
 	$(CXX) $^ $(INC_DIRS) $(ROOT_CONFIG) $(CXXFLAGS) -o $@
